project/sooon/service-go_api.yaml
# go_api services.yaml
# 開放port出來供外部使用或是內部串接使用
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    name: sooon-go
  type: NodePort   #開放給其他叢集使用不對外開放
